# shironet

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
docs/: README.md  kaggle-hf-workflow.md
docs/architecture/: README.md  system-overview.md
docs/assets/: README.md
docs/assets/benchmark_kaggle_v1/: README.md  benchmark_summary.json  report.md
docs/assets/intel_run2/: README.md  class_metrics.csv  eval_metrics.json  report.md
docs/assets/optimization/: README.md  latency_table.md  profile_mobilenet_v3_small.json  profile_resnet18.json  profile_shufflenet_v2_x0_5.json  report.md
docs/assets/optimization/edge_eval/: README.md  class_metrics.csv  (+2 more)
docs/assets/showcase/: README.md
docs/protocols/: README.md  ghost-ref-zero.md
kaggle/: README.md
kaggle/benchmark_gpu/: README.md  benchmark.py  kernel-metadata.json
kaggle/shironet_train_gpu/: kernel-metadata.json  train_kaggle.py
models/: README.md
notebooks/: 01_baseline_test.ipynb  02_distillation_trial.ipynb  03_edge_training_t4_schedule.ipynb  04_export_quantization_latency.ipynb  05_kaggle_t4_results.ipynb  README.md
scripts/: README.md  export_and_benchmark.py  generate_assets.py  hf_upload.py  kaggle_fetch.py  profile_model.py
src/: README.md  __init__.py  __main__.py  config.py  evaluate.py  train.py
src/data/: README.md  __init__.py  prepare_dataset.py  processing.py
src/models/: README.md  __init__.py  backbone.py  factory.py
src/training/: README.md  __init__.py  adversarial.py
tests/: README.md  test_config.py
(+7 files in other folders)
